@@ -564,8 +564,12 @@ def export_gmf(ekey, dstore):
     :param ekey: export key, i.e. a pair (datastore key, fmt)
     :param dstore: datastore object
     """
-    sitecol = dstore['sitecol']
     oq = dstore['oqparam']
+    if not oq.calculation_mode.startswith('scenario'):
+        logging.warn('The GMF exporter in .xml format has been removed, '
+                     'use the one in .csv format')
+        return []
+    sitecol = dstore['sitecol']
     investigation_time = (None if oq.calculation_mode == 'scenario'
                           else oq.investigation_time)
     fmt = ekey[-1]
@@ -578,11 +582,11 @@ def export_gmf(ekey, dstore):
     ruptures_by_rlz = collections.defaultdict(list)
     data = gmf_data['data'].value
     events = dstore['events'].value
+    ses_idx = 1  # for scenario only
     for rlzi, gmf_arr in group_array(data, 'rlzi').items():
         ruptures = ruptures_by_rlz[rlzi]
         for idx, gmfa in group_array(gmf_arr, 'eid').items():
             ses_idx = events[idx]['ses']
-            eid = events[idx]['eid']
             rup = Rup(eid, ses_idx, sorted(set(gmfa['sid'])), gmfa)
             ruptures.append(rup)
     rlzs = dstore['csm_info'].get_rlzs_assoc().realizations
