@@ -1,44 +1,0 @@
-<?xml version="1.0" encoding="utf-8"?>
-<nrml
-xmlns="http://openquake.org/xmlns/nrml/0.5"
-xmlns:gml="http://www.opengis.net/gml"
->
-    <gmfCollection
-    gsimTreePath="b1"
-    sourceModelTreePath="b1"
-    >
-        <gmfSet
-        investigationTime="1.0"
-        stochasticEventSetId="214"
-        >
-            <gmf
-            IMT="PGA"
-            ruptureId="9388798509056"
-            >
-                <node gmv="4.0074384E-01" lat="0.0000000E+00" lon="0.0000000E+00"/>
-            </gmf>
-        </gmfSet>
-        <gmfSet
-        investigationTime="1.0"
-        stochasticEventSetId="253"
-        >
-            <gmf
-            IMT="PGA"
-            ruptureId="7679401525248"
-            >
-                <node gmv="3.3172143E-01" lat="0.0000000E+00" lon="0.0000000E+00"/>
-            </gmf>
-        </gmfSet>
-        <gmfSet
-        investigationTime="1.0"
-        stochasticEventSetId="358"
-        >
-            <gmf
-            IMT="PGA"
-            ruptureId="7606387081216"
-            >
-                <node gmv="3.2905376E-01" lat="0.0000000E+00" lon="0.0000000E+00"/>
-            </gmf>
-        </gmfSet>
-    </gmfCollection>
-</nrml>
